# SimpleCudaNeuralNet

./: .gitignore  CMakeLists.txt  Common.props  README.md  SimpleCudaNn.sln  SimpleCudaNn.vcxproj  SimpleCudaNn.vcxproj.filters  cifar10.cpp  ffCudaNn.cpp  ffCudaNn.h  main.cpp  mnist.cpp
mnist/: MNIST DATABASE.txt
